[build-system]
requires      = ["lxml==4.9.1", "setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yakindu-merge-py"
version = "0.0.1"
description = "Divide and merge statecharts for easy collaboration"
readme = "README.md"
authors = [{ name = "Rein Spanjer", email = "contact@reinspanjer.nl" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["yakindu", "tool", "merge"]
dependencies = [
    "lxml==4.9.1",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["black", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/Spanjer1/yakindu-merge-py"

[project.scripts]
yakmerge = "yakmerge.__main__:main"